@@ -1,58 +1,63 @@
 package com.example.demo.clean.infrastructure.gateways;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 import com.example.demo.clean.application.gateways.ProdutoGateway;
-import com.example.demo.clean.domains.entities.Produto;
+import com.example.demo.clean.entities.Produto;
 import com.example.demo.clean.infrastructure.persistence.ProdutoEntity;
 import com.example.demo.clean.infrastructure.persistence.ProdutoPersistence;
 
 public class ProdutoGatewayImpl implements ProdutoGateway {
 
-    private final ProdutoPersistence produtoPersistence;
+    private final ProdutoPersistence produtoRepository;
 
-    public ProdutoGatewayImpl(ProdutoPersistence produtoPersistence) {
-        this.produtoPersistence = produtoPersistence;
+    public ProdutoGatewayImpl(ProdutoPersistence produtoRepository) {
+        this.produtoRepository = produtoRepository;
     }
 
     @Override
     public List<Produto> findAll() {
-        return produtoPersistence.findAll().stream()
+        return produtoRepository.findAll().stream()
                 .map(produtoEntity -> new Produto(produtoEntity.getId(), produtoEntity.getNome(), produtoEntity.getDescricao(), produtoEntity.getQuantidade(), produtoEntity.getPreco()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Produto findById(int id) {
-        return produtoPersistence.findById(id).map(produtoEntity -> new Produto(produtoEntity.getId(), produtoEntity.getNome(), produtoEntity.getDescricao(), produtoEntity.getQuantidade(), produtoEntity.getPreco())).orElse(null);
+    public Produto findById(Integer id) {
+        return produtoRepository.findById(id)
+                .map(produtoEntity -> new Produto(produtoEntity.getId(), produtoEntity.getNome(), produtoEntity.getDescricao(), produtoEntity.getQuantidade(), produtoEntity.getPreco()))
+                .orElse(null);
     }
 
     @Override
     public Produto save(Produto produto) {
-        ProdutoEntity entity = new ProdutoEntity(produto.id(), produto.nome(), produto.descricao(), produto.quantidade(), produto.preco());
-        return new Produto(produtoPersistence.save(entity).getId(), entity.getNome(), entity.getDescricao(), entity.getQuantidade(), entity.getPreco());
+        ProdutoEntity produtoEntity = new ProdutoEntity(produto.getId(), produto.getNome(), produto.getDescricao(), produto.getQuantidade(), produto.getPreco());
+        ProdutoEntity savedProdutoEntity = produtoRepository.save(produtoEntity);
+        return new Produto(savedProdutoEntity.getId(), savedProdutoEntity.getNome(), savedProdutoEntity.getDescricao(), savedProdutoEntity.getQuantidade(), savedProdutoEntity.getPreco());
     }
 
     @Override
-    public boolean deleteById(int id) {
-        if (produtoPersistence.existsById(id)) {
-            produtoPersistence.deleteById(id);
+    public boolean deleteById(Integer id) {
+        if (produtoRepository.existsById(id)) {
+            produtoRepository.deleteById(id);
             return true;
         }
         return false;
+
     }
 
     @Override
     public boolean deleteAll() {
-        if (produtoPersistence.count() > 0) {
-            produtoPersistence.deleteAll();
+        if (produtoRepository.count() > 0) {
+            produtoRepository.deleteAll();
             return true;
         }
         return false;
+
     }
 
     @Override
     public Integer count() {
-        return (int) produtoPersistence.count();
+        return (int) produtoRepository.count();
     }
 }
